Fix page header title gap (#3819)

--- a/packages/scss/src/components/pageHeader/component.scss
+++ b/packages/scss/src/components/pageHeader/component.scss
@@ -20,7 +20,7 @@
 
 		.pageHeader-content-title {
 			display: flex;
-			column-gap: var(--pr-t-spacings-100);
+			column-gap: var(--pr-t-spacings-150);
 			align-items: center;
 			flex-wrap: wrap;
 			min-block-size: var(--pr-t-spacings-500);
